# advent-of-code-2021

./: Cargo.toml
src/: cli.rs  lib.rs  measurements.rs
src/calculations/: trend.rs
tests/: day_1.rs
tests/test_helpers/: mod.rs
